--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 
 before_script:
   - go get -u github.com/mitchellh/gox
-  - go vet github.com/dropbox/dbxcli
+  - go vet github.com/MartinDelille/dbxcli
 
 install: true
 
